# nyc-data-reconciliation

./: .gitignore  pyproject.toml
data/fixtures/: payroll_sample.csv  spending_sample.csv
src/nyc_data_reconciliation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nyc_recon/: cleaning.py  io.py  transform.py
tests/: test_cleaning.py  test_io_contracts.py  test_transform.py
