[project]
name = "nyc-data-reconciliation"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]